Completed code to evaluate the cryptocurrency wallet by using the requests library.

--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the environment variables from the .env file\n",
     "#by calling the load_dotenv function\n",
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The monthly amount for the member's household income\n",
-    "# YOUR CODE HERE\n"
+    "monthly_income = 12000"
    ]
   },
   {
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,30 +138,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"data\": {\n",
+      "    \"1\": {\n",
+      "      \"circulating_supply\": 18918356,\n",
+      "      \"id\": 1,\n",
+      "      \"last_updated\": 1641173322,\n",
+      "      \"max_supply\": 21000000,\n",
+      "      \"name\": \"Bitcoin\",\n",
+      "      \"quotes\": {\n",
+      "        \"USD\": {\n",
+      "          \"market_cap\": 891320940604,\n",
+      "          \"percent_change_1h\": -0.3082681316225,\n",
+      "          \"percent_change_24h\": -0.906410238395459,\n",
+      "          \"percent_change_7d\": -7.45257840219119,\n",
+      "          \"percentage_change_1h\": -0.3082681316225,\n",
+      "          \"percentage_change_24h\": -0.906410238395459,\n",
+      "          \"percentage_change_7d\": -7.45257840219119,\n",
+      "          \"price\": 47063.0,\n",
+      "          \"volume_24h\": 33016831292\n",
+      "        }\n",
+      "      },\n",
+      "      \"rank\": 1,\n",
+      "      \"symbol\": \"BTC\",\n",
+      "      \"total_supply\": 18918356,\n",
+      "      \"website_slug\": \"bitcoin\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"metadata\": {\n",
+      "    \"error\": null,\n",
+      "    \"num_cryptocurrencies\": 3105,\n",
+      "    \"timestamp\": 1641173322\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the Python requests library, make an API call to access the current price of BTC\n",
-    "btc_response = # YOUR CODE HERE\n",
+    "btc_response = requests.get(btc_url).json()\n",
     "\n",
     "# Use the json.dumps function to review the response data from the API call\n",
     "# Use the indent and sort_keys parameters to make the response object readable\n",
-    "# YOUR CODE HERE\n"
+    "\n",
+    "print(json.dumps(btc_response, indent=2, sort_keys=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"data\": {\n",
+      "    \"1027\": {\n",
+      "      \"circulating_supply\": 119000546,\n",
+      "      \"id\": 1027,\n",
+      "      \"last_updated\": 1641173325,\n",
+      "      \"max_supply\": 0,\n",
+      "      \"name\": \"Ethereum\",\n",
+      "      \"quotes\": {\n",
+      "        \"USD\": {\n",
+      "          \"market_cap\": 453309260882,\n",
+      "          \"percent_change_1h\": -0.353457170658481,\n",
+      "          \"percent_change_24h\": 1.36654692459556,\n",
+      "          \"percent_change_7d\": -6.60663440621781,\n",
+      "          \"percentage_change_1h\": -0.353457170658481,\n",
+      "          \"percentage_change_24h\": 1.36654692459556,\n",
+      "          \"percentage_change_7d\": -6.60663440621781,\n",
+      "          \"price\": 3805.81,\n",
+      "          \"volume_24h\": 11874673002\n",
+      "        }\n",
+      "      },\n",
+      "      \"rank\": 2,\n",
+      "      \"symbol\": \"ETH\",\n",
+      "      \"total_supply\": 119000546,\n",
+      "      \"website_slug\": \"ethereum\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"metadata\": {\n",
+      "    \"error\": null,\n",
+      "    \"num_cryptocurrencies\": 3105,\n",
+      "    \"timestamp\": 1641173325\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the Python requests library, make an API call to access the current price ETH\n",
-    "eth_response = # YOUR CODE HERE\n",
+    "eth_response = requests.get(eth_url).json()\n",
+    "\n",
     "\n",
     "# Use the json.dumps function to review the response data from the API call\n",
     "# Use the indent and sort_keys parameters to make the response object readable\n",
-    "# YOUR CODE HERE\n"
+    "print(json.dumps(eth_response, indent=2, sort_keys=True))\n"
    ]
   },
   {
@@ -162,28 +255,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price for Bitcoin is $47063.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Navigate the BTC response object to access the current price of BTC\n",
-    "btc_price = # YOUR CODE HERE\n",
+    "btc_price = btc_response['data']['1']['quotes']['USD']['price']\n",
     "\n",
     "# Print the current price of BTC\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The price for Bitcoin is ${btc_price}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price for ETH is $3805.81\n"
+     ]
+    }
+   ],
    "source": [
     "# Navigate the BTC response object to access the current price of ETH\n",
-    "eth_price = # YOUR CODE HERE\n",
+    "eth_price = eth_response['data']['1027']['quotes']['USD']['price']\n",
     "\n",
     "# Print the current price of ETH\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The price for ETH is ${eth_price}\")\n"
    ]
   },
   {
@@ -195,42 +304,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of current Bitcoin holdings is $56475.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the current value of the BTC holding \n",
-    "btc_value = # YOUR CODE HERE\n",
+    "btc_value = btc_coins * btc_price\n",
     "\n",
     "# Print current value of your holding in BTC\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The value of current Bitcoin holdings is ${btc_value}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of current ETH holdings is $20170.792999999998\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the current value of the ETH holding \n",
-    "eth_value = # YOUR CODE HERE\n",
+    "eth_value = eth_coins * eth_price\n",
     "\n",
     "# Print current value of your holding in ETH\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The value of current ETH holdings is ${eth_value}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current crypto wallet balance is 76646.393\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the total value of the cryptocurrency wallet\n",
     "# Add the value of the BTC holding to the value of the ETH holding\n",
-    "total_crypto_wallet = # YOUR CODE HERE\n",
+    "total_crypto_wallet = btc_value + eth_value\n",
     "\n",
     "# Print current cryptocurrency wallet balance\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The current crypto wallet balance is {total_crypto_wallet}\")"
    ]
   },
   {
@@ -945,9 +1078,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:blended]",
+   "display_name": "Python (dev)",
    "language": "python",
-   "name": "conda-env-blended-py"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -959,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
